2002-07-29  Reinhard Max  <max@suse.de>

	* unix/tcl.m4 (SC_SERIAL_PORT): Fixed detection for cases when
                                        configure's stdin is not a tty.
	
	* unix/tclUnixPort.h: 
	* generic/tclIOSock.c:          Changed size_t to socklen_t in
                                        socket-related function calls.

	* unix/configure.in:            Added test and fallback definition
                                        for socklen_t.
	
	* unix/configure:               generated.

2002-07-29  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclObj.c: fixed a comment

	* generic/tcl.h: 
	* generic/tclBasic.c: 
	* generic/tclInterp.c: added the new flag TCL_EVAL_INVOKE to
	the interface of the Tcl_Eval* functions, removing the
	TCL_EVAL_NO_TRACEBACK added yesterday: alias invocations not only 
	require no tracebacks, but also look up the command name in the
	global scope - see new test interp-9.4
	* tests/interp.test: added 9.3 to test for safety of aliases to
	hidden commands, 9.4 to test for correct command lookup scope.

2002-07-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/regc_locale.c (cclass): [[:xdigit:]] is only a defined
	concept on western characters, so should not allow any unicode
	digit, and hence number of ranges in [[:xdigit:]] is fixed.
	* tests/reg.test: Added test to detect the bug.
	* generic/regc_cvec.c (newcvec): Corrected initial size value in
	character vector structure.  [Bug 578363]  Many thanks to
	pvgoran@users.sf.net for tracking this down.

2002-07-28  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tcl.h: 
	* generic/tclBasic.c: added the new flag TCL_EVAL_NO_TRACEBACK to
	the interface of the Tcl_Eval* functions. Modified the error
	message for too many nested evaluations.
	* generic/tclInterp.h: changed the Alias struct to be of variable
	length and store the prefix arguments directly (instead of a
	pointer to a Tcl_Obj list). Made AliasObjCmd call Tcl_EvalObjv